# rumif-cursor-workshop

./: pyproject.toml
api/: main.py
tests/api/: test_main.py
