[project]
name = "rumif-cursor-workshop"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Rumi Fujimoto", email = "rumi.fujimoto@example.com" }
]
dependencies = [
    "fastapi>=0.111.1",
    "uvicorn[standard]>=0.30.3",
    "pydantic>=2.8.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "httpx>=0.28.1",
    "asgi-lifespan>=2.1.0",
    "trio>=0.30.0",
    "ruff>=0.12.0",
    "pyright>=1.1.402",
    "pre-commit>=4.2.0",
    "pytest-cov>=6.2.1",
    "anyio>=4.9.0",
    "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["api", "ui"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pyright]
pythonVersion = "3.12"
strict = ["**"]

